<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorComponentBackground">

    <ImageView
        android:id="@+id/icon_upcoming_date"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:padding="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/ic_query_builder"
        android:alpha="0.54"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/upcoming_date"
        app:layout_constraintBottom_toBottomOf="@+id/upcoming_date"/>

    <TextView
            android:id="@+id/upcoming_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_upcoming_date"
            android:textColor="@color/colorTextBody"
            app:layout_constraintLeft_toRightOf="@+id/icon_upcoming_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/other_upcoming_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/sample_other_upcoming_dates"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/upcoming_date"
        app:layout_constraintTop_toBottomOf="@+id/upcoming_date" />

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:padding="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/ic_location_tinted"
        android:alpha="0.54"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/location"
        app:layout_constraintBottom_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sample_location"
        android:textColor="@color/colorTextBody"
        app:layout_constraintLeft_toRightOf="@+id/icon_location"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_upcoming_dates"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/location_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sample_location_address"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/location"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/icon_ticket"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/ic_ticket"
        android:alpha="0.54"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ticket_available"
        app:layout_constraintBottom_toBottomOf="@+id/ticket_available" />

    <TextView
        android:id="@+id/ticket_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ticket_available"
        app:layout_constraintLeft_toRightOf="@+id/icon_location"
        app:layout_constraintTop_toBottomOf="@id/location_address"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sample_url"
        android:textColor="@color/colorTextBody"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/ticket_available"
        app:layout_constraintTop_toBottomOf="@+id/ticket_available"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/icon_tel_number"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:padding="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/ic_phone_call"
        android:alpha="0.54"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tel_number"
        app:layout_constraintBottom_toBottomOf="@+id/tel_number" />

    <TextView
        android:id="@+id/tel_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sample_tel_number"
        android:textColor="@color/colorTextBody"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/icon_location"
        app:layout_constraintTop_toBottomOf="@id/url"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>