<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorComponentBackground">
    <ImageView
            android:id="@+id/rich_media"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            app:srcCompat="@color/colorContentEmptyDark"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <include android:layout_width="0dp" android:layout_height="wrap_content"
             layout="@layout/event_details_header" android:layout_marginTop="-4dp"
             app:layout_constraintTop_toBottomOf="@+id/rich_media" android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="parent" android:id="@+id/include"
        app:layout_constraintHorizontal_bias="0.0" />
    <TextView
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_body"
            android:textColor="@color/colorTextBody"
            android:maxLines="3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/include"/>
    <ImageView
            android:id="@+id/icon_upcoming_date"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:padding="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_query_builder"
            android:alpha="0.54"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/upcoming_date"
            app:layout_constraintBottom_toBottomOf="@+id/upcoming_date"/>
    <TextView
            android:id="@+id/upcoming_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/sample_upcoming_date"
            android:textColor="@color/colorTextBody"
            app:layout_constraintLeft_toRightOf="@+id/icon_upcoming_date"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/body"/>
    <TextView
            android:id="@+id/other_upcoming_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/sample_other_upcoming_dates"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@+id/upcoming_date"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_date"/>
    <ImageView
            android:id="@+id/icon_location"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:padding="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_location"
            android:alpha="0.54"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/location"
            app:layout_constraintBottom_toBottomOf="@+id/location"/>
    <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_location"
            android:textColor="@color/colorTextBody"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/icon_location"
            app:layout_constraintTop_toBottomOf="@+id/other_upcoming_dates"/>
    <TextView
            android:id="@+id/location_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_location_address"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@+id/location"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <com.evely.android.evelymobileapplication.view.design.Separator
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="0dp"
            android:layout_marginEnd="0dp"
            app:fill_color="@color/colorBorder"
            app:strokeWidth="@dimen/divider_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_address"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:id="@+id/action_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/action_explore"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold"
            android:clickable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/action_share"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/colorTextActionSecondary"
            android:textAlignment="center"
            android:clickable="true"
            app:layout_constraintLeft_toRightOf="@+id/action_explore"
            app:layout_constraintTop_toTopOf="@+id/action_explore"
            app:layout_constraintBottom_toBottomOf="@+id/action_explore"/>
</android.support.constraint.ConstraintLayout>