<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorComponentBackground">
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_photo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@color/colorContentEmpty"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/colorBorder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/comment_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_comment_container"
            app:layout_constraintLeft_toRightOf="@+id/profile_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <TextView
                android:id="@+id/who"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sample_who"
                android:textColor="@color/colorTextTitle"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        <TextView
                android:id="@+id/comment_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sample_comment_body"
                android:textColor="@color/colorTextBody"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/who"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
            android:id="@+id/commented_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/sample_commented_at"
            app:layout_constraintLeft_toLeftOf="@+id/comment_container"
            app:layout_constraintTop_toBottomOf="@+id/comment_container"/>
    <com.evely.android.evelymobileapplication.view.design.PressEffectWrapper
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:revealedDrawable="@drawable/bg_button_pressed_round"
            app:layout_constraintTop_toBottomOf="@+id/comment_container"
            app:layout_constraintLeft_toRightOf="@+id/commented_at">
        <TextView
                android:id="@+id/action_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_reply"
                android:textColor="@color/colorPrimaryDark"/>
    </com.evely.android.evelymobileapplication.view.design.PressEffectWrapper>

    <com.evely.android.evelymobileapplication.view.design.PressEffectWrapper
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            app:revealedDrawable="@drawable/bg_button_pressed_round"
            app:layout_constraintLeft_toLeftOf="@+id/comment_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/commented_at">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/action_view_replies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_view_replies"
                    android:textColor="@color/blackOpacity87"/>
            <ImageView
                    android:id="@+id/icon_action_view_replies"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    app:srcCompat="@drawable/ic_chevron_right"/>
        </LinearLayout>
    </com.evely.android.evelymobileapplication.view.design.PressEffectWrapper>
</android.support.constraint.ConstraintLayout>